Bump dependencies and 1.19.4 update